--- a/app.json
+++ b/app.json
@@ -10,7 +10,8 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.numal-mindfulness"
+      "bundleIdentifier": "com.anonymous.numal-mindfulness",
+      "bitcode": false
     },
     "android": {
       "adaptiveIcon": {
@@ -20,7 +21,17 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": [
+        "android.permission.ACCESS_NETWORK_STATE",
+        "android.permission.CAMERA",
+        "android.permission.INTERNET",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.SYSTEM_ALERT_WINDOW",
+        "android.permission.WAKE_LOCK",
+        "android.permission.BLUETOOTH"
+      ]
     },
     "web": {
       "output": "static",
@@ -39,11 +50,27 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "@config-plugins/react-native-webrtc",
+        {
+          "microphonePermission": "Alllow $(PRODUCT_NAME) to access your microphone for AI voice conversations "
+        }
+      ],
+      [
+        "@livekit/react-native-expo-plugin"
       ]
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "01306f1e-bb76-4b3e-8381-5344420af045"
+      }
+    },
+    "owner": "bkumar24"
   }
 }
