--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@shopify/react-native-skia": "^2.4.14",
+    "@shopify/react-native-skia": "2.2.12",
     "expo": "~54.0.32",
+    "expo-auth-session": "~7.0.10",
+    "expo-brightness": "~14.0.8",
     "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.11",
