--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
       "bitcode": false
     },
     "android": {
+      "package": "com.anonymous.numal_mindfulness",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -34,7 +35,8 @@
       ]
     },
     "web": {
-      "output": "static",
+      "bundler": "metro",
+      "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
