chore: clean gitignore for public repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
 # dependencies
 node_modules/
 
@@ -7,9 +5,8 @@ node_modules/
 .expo/
 dist/
 web-build/
-expo-env.d.ts
 
-# Native
+# Native secrets
 .kotlin/
 *.orig.*
 *.jks
@@ -17,27 +14,26 @@ expo-env.d.ts
 *.p12
 *.key
 *.mobileprovision
+*.pem
 
 # Metro
 .metro-health-check*
 
-# debug
+# Debug logs
 npm-debug.*
 yarn-debug.*
 yarn-error.*
 
 # macOS
 .DS_Store
-*.pem
 
-# local env files
+# Env files
+.env
+.env.local
 .env*.local
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 
+# Tutorial leftovers
 app-example
-
-# generated native folders
-/ios
-/android
